Fix the bug in the change password modal

--- a/src/main/webapp/tpl/TemplatePageUsers.html
+++ b/src/main/webapp/tpl/TemplatePageUsers.html
@@ -45,7 +45,7 @@
 		<div class="modal-h modal-header">
 			<button type="button" class="close" data-dismiss="modal"
 				aria-hidden="true">×</button>
-			<h3 id="myModalLabel">Novo Evento</h3>
+			<h3 id="myModalLabel">Novo Usuário</h3>
 		</div>
 		<div id="modal-body-user" class="modal-body"></div>
 		<div class="modal-footer">
