--- a/src/main/webapp/tpl/UserView.html
+++ b/src/main/webapp/tpl/UserView.html
@@ -40,9 +40,9 @@
 	</div>
 </div>
 
-<div id='changePassModal{{ id }}' class='modal hide fade' tabindex='-1'
+<div id='changePassModal{{ id }}' class='modal fade' tabindex='-1'
 	tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-	aria-hidden="true" style="display: none;">
+	aria-hidden="true">
 	<div class="modal-h modal-header">
 		<button type="button" class="close" data-dismiss="modal"
 			aria-hidden="true">×</button>
@@ -85,7 +85,8 @@
 	</div>
 	<div class='modal-footer'>
 		<button class='btn btn-primary ' data-dismiss='modal' aria-hidden='true'>Sair</button>
-		<button class='btn btn-danger saveNewPassword' id='confirm-save'>Salvar</button>
+<!-- 		<button class='btn btn-danger saveNewPassword' id='confirm-save' aria-hidden="true">Salvar</button> -->
+		<button class="btn btn-success saveNewPassword" aria-hidden="true">Salvar</button>
 	</div>
 </div>
 
