using BackGrid.js to render a list(table) of users

--- a/src/main/webapp/tpl/TemplatePageUsers.html
+++ b/src/main/webapp/tpl/TemplatePageUsers.html
@@ -13,13 +13,17 @@
 	</div>
 	<!-- /btn-group -->
 	<div class="pull-right">
-		<a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i
-			class="icon-large tips icon-table" data-placement="left"
-			data-toggle="tooltip" title=""
-			data-original-title="Exibir como tabela."></i> <i
-			class="icon-large tips icon-th-large" data-placement="right"
-			data-toggle="tooltip" title=""
-			data-original-title="Exibir como thumbnails"></i>
+		<a id="showTable"> 
+			<i  class="icon-large tips icon-table"
+			data-placement="left" data-toggle="tooltip" title=""
+			data-original-title="Exibir como tabela."> 
+			</i>
+		</a> 
+		<a id="showThumbnails"  >
+			<i class="icon-large tips icon-th-large"
+			data-placement="right" data-toggle="tooltip" title=""
+			data-original-title="Exibir como thumbnails">
+			</i> 
 		</a>
 	</div>
 	<!-- 	<div class="btn-group"> -->
