--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-<title>Sints App</title>
+<title>Base App</title>
 
 <meta name="description" content="">
-<meta name="author" content="sints">
+<meta name="author" content="robsonmrsp">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-
-	<link href="css/styles.css" rel="stylesheet"/>
+<link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
@@ -19,8 +17,7 @@
 				<a class="navbar-inner btn btn-navbar" data-toggle="collapse"
 					data-target=".nav-collapse"> <span class="icon-bar"></span> <span
 					class="icon-bar"></span> <span class="icon-bar"></span>
-				</a> <a class="brand" href="#"><img src="img/logo_20.png"
-					width="20px" height="20px" /> Sints View</a>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -43,11 +40,11 @@
 					<div class="member-box round-all" style="padding: 8px 0;">
 						<ul class="nav nav-list">
 							<li class="nav-header">Principal</li>
-							<li id="someEntityItemMenu"><a href="#sintsview/someEntity"><i
+							<li id="someEntityItemMenu"><a href="#app/someEntity"><i
 									class="icon-calendar"></i> Alguma entidade</a></li>
 
 							<li class="nav-header">Configuração</li>
-							<li id="usersItemMenu"><a href="#sintsview/users"><i
+							<li id="usersItemMenu"><a href="#app/users"><i
 									class="glyphicon-user"></i> Usuarios</a></li>
 
 						</ul>
@@ -62,7 +59,7 @@
 		</div>
 
 		<footer>
-			<p class="pull-right">© Sints 2013</p>
+			<p class="pull-right">© Robsonmrsp 2013</p>
 		</footer>
 	</div>
 	<script data-main="js/main" src="js/lib/require/require.js"></script>
