--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Login Box HTML Code - www.PSDGraphics.com</title>
+<title>Base App - https://github.com/robsonmrsp</title>
 
 <link href="css/bootstrap.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
@@ -36,14 +36,14 @@
 							name="j_password" placeholder="Senha" value="" />
 					</div>
 				</div> <br />
-				<div style="text-align: right; padding-right: 40px">
+				<div style="text-align: right;">
 					<button class="btn btn-large btn-block btn-primary" type="submit">Login</button>
 				</div> <br />
 		</form>
 		<div class="row" style="text-align: center;">
 			<div class="container" style="text-align: center;">
 				<p>
-					Powered by <a href="http://www.sints.com.br" target="_blank">Sints
+					Powered by <a href="https://github.com/robsonmrsp" target="_blank">Robsonmrsp
 					</a>
 
 				</p>
@@ -51,8 +51,6 @@
 		</div>
 
 	</div>
-
-	</footer>
-	
 </body>
+
 </html>
