--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -26,14 +26,14 @@
 				<div class="control-group login-field">
 					<div class="controls">
 						<input class="span3" type="text" id="j_username" name="j_username"
-							placeholder="Nome do usuario" value="" />
+							placeholder="Nome do usuario" value="robsonmrsp" />
 					</div>
 				</div>
 
 				<div class="control-group login-field">
 					<div class="controls">
 						<input class="span3" type="password" id="j_password"
-							name="j_password" placeholder="Senha" value="" />
+							name="j_password" placeholder="Senha" value="123" />
 					</div>
 				</div> <br />
 				<div style="text-align: right;">
