--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 				<div class="member-box round-all">
 					<a><img id="menuUserPhoto" src="img/user_64.png"
 						class="member-box-avatar"></a> <span> <strong
-						id="menuUserRole">Administrador</strong><br> <a
+						id="menuUserRole">Admin</strong><br> <a
 						id="menuUserName"></a><br> <span class="member-box-links"><a>Opções</a>
 							| <a href="j_spring_security_logout">Sair</a></span>
 					</span>
